tests/miniJava/neg/004921_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public int [] java ( int [] java , public java ) { return 0 ; } }
